# StrawCore

./: .gitignore  CMakeLists.txt  main.cpp
Assets/: GUI.vert  God.lua  Grid.frag  Grid.vert  KeyBindings.lua  base.frag  base.vert  easing.lua  test.lua
Engine/Components/: Components.hpp
Engine/GUI/: GUISystem.hpp
Engine/Math/: Math.hpp
Engine/Rendering/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.cpp~  Renderer.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp
Engine/Systems/: #ScriptingSystem.cpp#  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  ScriptingSystem.cpp  ScriptingSystem.cpp~  ScriptingSystem.hpp
Engine/Utils/: Logger.hpp  Threading.hpp  fontstash.h  nanovg.c  nanovg_gl.h
Engine/Window/: Window.cpp  Window.hpp
libs/include/: PxPhysicsAPI.h
libs/include/foundation/: Px.h  PxAllocatorCallback.h  PxPreprocessor.h  PxSimpleTypes.h
